# mcp-video

./: .gitignore  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
src/mcp_video/: __init__.py  server.py  video.py
tests/: test_server.py  test_video.py
